crates/pattern_provider/src/compose/snapshots/pattern_provider__compose__pseudo_messages__tests__render_skill_loaded_event_snapshot.snap
---
source: crates/pattern_provider/src/compose/pseudo_messages.rs
expression: text
---
<system-reminder>
[skill:loaded] name="fix-authentication" trust_tier="project-local"

## Overview

Handles OAuth2 token refresh for expired sessions.

[skill:loaded:end]
</system-reminder>
