crates/pattern_provider/src/compose/snapshots/pattern_provider__compose__pseudo_messages__tests__render_skill_loaded_text_snapshot.snap
---
source: crates/pattern_provider/src/compose/pseudo_messages.rs
assertion_line: 728
expression: text
---
[skill:loaded] name="fix-authentication" trust_tier="project-local"

## Overview

Handles OAuth2 token refresh for expired sessions.

[skill:loaded:end]
